--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "eslint-plugin-storybook": "^0.6.10",
     "glob": "^8.0.0",
     "modular-scripts": "patch:modular-scripts@npm:3.6.0#.yarn/patches/modular-scripts-npm-3.4.0-8cdb747f13.patch",
+    "modular-template-package": "^1.2.0",
     "no-scroll": "^2.1.1",
     "nyse-holidays": "^1.2.0",
     "prettier": "^2.6.2",
