--- a/packages/countries/package.json
+++ b/packages/countries/package.json
@@ -25,6 +25,7 @@
     }
   },
   "devDependencies": {
+    "glob": "^8.0.0",
     "mustache": "^4.2.0",
     "rimraf": "^4.4.0",
     "svgo": "^3.0.0"
