add build:countries build script

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "start:site:storybook": "yarn workspace @salt-ds/site storybook",
     "build:site": "yarn workspace @salt-ds/site build",
     "build:site:storybook": "yarn workspace @salt-ds/site build-storybook",
-    "build": "yarn build:core && yarn build:lab && yarn build:icons && yarn build:theme && yarn build:grid && yarn build:ag-grid-theme",
+    "build": "yarn build:core && yarn build:lab && yarn build:icons && yarn build:countries && yarn build:theme && yarn build:grid && yarn build:ag-grid-theme",
     "build:core": "modular build @salt-ds/core",
     "build:icons": "modular build @salt-ds/icons",
+    "build:countries": "modular build @salt-ds/countries",
     "build:lab": "modular build @salt-ds/lab",
     "build:theme": "yarn workspace @salt-ds/theme build",
     "build:grid": "modular build @salt-ds/data-grid",
