--- a/site/package.json
+++ b/site/package.json
@@ -43,6 +43,7 @@
     "cross-env": "^7.0.3",
     "eslint-config-next": "^13.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-element-to-jsx-string": "^15.0.0"
   }
 }
