--- a/packages/countries/package.json
+++ b/packages/countries/package.json
@@ -6,10 +6,7 @@
   "modular": {
     "type": "package"
   },
-  "sideEffects": [
-    "**/*.css",
-    "**/*.css.js"
-  ],
+  "sideEffects": false,
   "scripts": {
     "build": "yarn clean && node ./scripts/generateCountrySymbol.mjs '*.svg'",
     "clean": "rimraf ./src/components"
