--- a/packages/data-grid/package.json
+++ b/packages/data-grid/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.4-alpha.2",
   "license": "Apache-2.0",
   "main": "src/index.ts",
-  "sideEffects": [
-    "**/*.css",
-    "**/*.css.js"
-  ],
+  "sideEffects": false,
   "peerDependencies": {
     "@types/react": ">=16.8.6",
     "react": ">=16.8.0",
