--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -3,10 +3,7 @@
   "version": "1.3.1",
   "license": "Apache-2.0",
   "main": "src/index.ts",
-  "sideEffects": [
-    "**/*.css",
-    "**/*.css.js"
-  ],
+  "sideEffects": false,
   "scripts": {
     "build": "yarn clean && yarn node ./scripts/generateIcons.mjs '*.svg'",
     "clean": "rimraf ./src/components"
